--- a/01/Ex02.html
+++ b/01/Ex02.html
@@ -6,3 +6,24 @@ Depois disso  calcule e mostre no console:
 a) O valor dos 10% (cota do garçom)
 b) O valor final da conta (consumo + 10%)
 c) O valor que cada cliente deve pagar -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <script>
+          var numero = prompt ('digite o preço')
+       numero = Number(numero)
+        var garcom = numero*0.1
+        var cliente = prompt ('digite o numero de cliente')
+        cliente = Number(cliente)
+        console.log ("valor total= "+Number ((numero + garcom)/cliente))
+        
+    </script>
+</body>
+</html>
