--- a/01/Ex01.html
+++ b/01/Ex01.html
@@ -1,2 +1,24 @@
 <!-- Elabore um programa que leia um número e calcule os seus 
 vizinhos (anterior e posterior)  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <h1>exercicio 01</h1>
+    <script>
+        //alert ('ola mundo')
+        var numero = prompt ('digita algo')
+        numero = Number(numero)
+        console.log ("o nomero digitado é"+ numero)
+        var anterior = numero -1;
+        var posterior = numero +1;
+        console.log("os vizinhos do numero" + numero + "sao" + anterior + "e" + posterior)
+
+    </script>
+</body>
+</html>
