--- a/01/Ex04.html
+++ b/01/Ex04.html
@@ -1,2 +1,21 @@
 <!-- Elabore um progrma que receba duas notas de um aluno e 
     calcule a média -->
+   
+        <meta charset="UTF-8">
+        <script>
+
+            var nota1= prompt('digite a nota1')
+            var nota2= prompt('digite a')
+          function mediaAluno (n1,n2){
+          /*  var nota1, nota2;
+            nota1=10;
+            nota2=8;*/
+            var media = (n1+n2)/2;
+            console.log('a media é ' media);
+          }
+
+          mediaAluno(nota1,nota2);
+
+       </script>
+    </body>
+    </html>
