--- a/01/Ex05.html
+++ b/01/Ex05.html
@@ -1,2 +1,11 @@
 <!-- Crie um programa que receba o valor do raio de uma circunferência e 
 calcule a sua área -->
+
+<meta charset="UTF-8">
+<script>
+    function areaCirc(raio){
+        const pi=3.14;
+        return pi*(raio**2)
+    }
+    console.log(areaCirc(10))
+</script>
